force-app/main/default/objects/Retail_Store__c/fields/Days_Since_Opening__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Opening__c</fullName>
    <label>Days Since Opening</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>