force-app/main/default/objects/Retail_Store__c/fields/Store_Manager__c.field-meta.xml
<CustomField>
    <fullName>Store_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Retail_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>