force-app/main/default/objects/Retail_Store__c/fields/Store_timings__c.field-meta.xml
<CustomField>
    <fullName>Store_timings__c</fullName>
    <label>Store timings</label>
    <type>Time</type>
</CustomField>